--- a/pages/index.css
+++ b/pages/index.css
@@ -5,4 +5,11 @@
   @import url('../blocks/header/__lang-link/header__lang-link.css');
   @import url('../blocks/header/__lang-link/_language/header__lang-link_language_ru.css');
   @import url('../blocks/header/__lang-link/_language/header__lang-link_language_en.css');
+@import url('../blocks/content/content.css');
+@import url('../blocks/lead/lead.css');
+  @import url('../blocks/lead/__title/lead__title.css');
+  @import url('../blocks/lead/__subtitle/lead__subtitle.css');
+  @import url('../blocks/lead/__figure/lead__figure.css');
+  @import url('../blocks/lead/__image/lead__image.css');
+  @import url('../blocks/lead/__caption/lead__caption.css');
 
