--- a/fonts/inter/font.css
+++ b/fonts/inter/font.css
@@ -1,4 +1,4 @@
 @font-face {
     font-family: inter;
-    src: url('../inter/Inter-VariableFont_slnt\,wght.ttf');
+    src: url('../inter/Inter-VariableFont_slnt\,wght.ttf') format('truetype');
 }
