--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,8 +2,26 @@
     display: flex;
     justify-content: space-between;
     align-items: center; 
-    width: 1184px;
-    height: 52px;
-    margin: 0 auto;
-    margin-top: 28px;
+    max-width: 1184px;
+    margin: 28px 48px 0 48px;
+}
+
+@media screen and (max-width: 1024px) {
+    .header{
+    max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header{
+    max-width: 720px;
+    margin: 28px 24px 0 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header{
+    max-width: 288px;
+    margin: 16px 16px 0 16px;
+    }
 }
