--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,3 +6,11 @@
     font-weight: 900;
     line-height: 58px;
 }
+
+@media screen and (max-width: 320px) {
+    .intro__title {
+        font-size: 32px;
+        font-style: normal;
+        line-height: 35px;
+    }
+}
