--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,4 +1,24 @@
 .intro {
-    margin: 92px 442px 92px 148px;
+    margin: 92px 0 92px 148px;
     max-width: 690px;
+}
+
+@media screen and (max-width: 1024px) {
+    .intro {
+        margin: 92px 0 92px 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .intro {
+        max-width: 720px;
+        margin: 88px 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .intro {
+        max-width: 288px;
+        margin: 64px 16px;
+    }
 }
