--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,5 +6,19 @@
     font-family: Inter;
     line-height: 14px;
     letter-spacing: 1.5px;
-    margin-left: 148px;
+    max-width: 160px;
+}
+
+@media screen and (max-width: 768px) {
+    .lead__caption {
+        margin-left: 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__caption {
+        margin-left: 16px;
+        font-style: normal;
+        font-weight: 400;
+    }
 }
