--- a/blocks/lead/__figure/lead__figure.css
+++ b/blocks/lead/__figure/lead__figure.css
@@ -1,3 +1,17 @@
 .lead__figure {
-    margin: 0;
+    margin: 0 148px;
+    min-width: 928px;
+}
+
+@media screen and (max-width: 1024px) {
+    .lead__figure {
+        margin: 0;
+        min-width: 768px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead__figure {
+        min-width: 320px;
+    }
 }
