--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,6 +6,23 @@
     font-family: Inter;
     font-weight: 900;
     line-height: 100px;
-    margin: 0 280px 32px 280px;
+    margin-bottom: 32px;
     text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+    .lead__title {
+         font-size: 12.5vw;
+         line-height: 13vw;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead__title {
+        max-width: 288px;
+        font-size: 40px;
+        font-style: normal;
+        line-height: 44px;
+        margin-bottom: 16px;
+    }
 }
