--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,3 +1,24 @@
 .lead {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 56px;
+}
+
+@media screen and (max-width: 1024px) {
+    .lead {
+        margin: 48px 48px 0 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead {
+        margin: 48px 0 0 0;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead {
+        margin: 48px 0 0 0;
+    }
 }
