--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,7 @@
 @import url('../fonts/inter/font.css');
 @import url('../blocks/page/page.css');
 @import url('../blocks/header/header.css');
-  @import url('../blocks/header/__logo/header__logo.css');
+  @import url('../blocks/header/__header-logo/header__header-logo.css');
   @import url('../blocks/header/__lang-link/header__lang-link.css');
   @import url('../blocks/header/__lang-link/_language/header__lang-link_language_ru.css');
   @import url('../blocks/header/__lang-link/_language/header__lang-link_language_en.css');
@@ -41,3 +41,7 @@
   @import url('../blocks/footer/__link/footer__link.css');
   @import url('../blocks/footer/__copyrite/footer__copyrite.css');
 
+  html {
+    background-color: wheat; 
+  }
+/* Временно!! */
