--- a/blocks/place/__lower-row/place__lower-row.css
+++ b/blocks/place/__lower-row/place__lower-row.css
@@ -1,4 +1,9 @@
 .place__lower-row {
     display: flex;
-    max-width: 984px;
+}
+
+@media screen and (max-width: 320px) {
+    .place__lower-row {
+        display: block;
+    }
 }
