--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,6 +7,21 @@
     font-family: Inter;
     font-style: normal;
     font-weight: 400;
-    line-height: 22px;
+    line-height: 1.2;
     z-index: 1;
+}
+
+@media screen and (max-width: 375px) {
+    .cover__subtitle {
+        font-size: 4.5vw;
+        line-height: 5vw;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover__subtitle {
+        max-width: 265px;
+        font-size: 14px;
+        line-height: 1.14;
+    }
 }
