--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,6 +7,28 @@
     font-family: Inter;
     font-style: normal;
     font-weight: 900;
-    line-height: 76px;
+    line-height: 1.05;
     z-index: 1;
+}
+
+@media screen and (max-width: 530px) {
+    .cover__title {
+        font-size: 13.5vw;
+        line-height: 14vw;
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .cover__title {
+        font-size: 13vw;
+        line-height: 14vw;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .cover__title {
+        max-width: 255px;
+        font-size: 32px;
+        line-height: 1.1;
+    }
 }
