--- a/blocks/footer/__copyrite/footer__copyrite.css
+++ b/blocks/footer/__copyrite/footer__copyrite.css
@@ -8,3 +8,15 @@
     font-weight: 400;
     line-height: 16px;
 }
+
+@media screen and (max-width: 650px) {
+    .footer__copyrite {
+        line-height: 14px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .footer__copyrite {
+        margin-top: 48px;
+    }
+}
