--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,3 +7,10 @@
     font-weight: 400;
     line-height: 18px;
 }
+
+@media screen and (max-width: 650px) {
+    .footer__link {
+        font-size: 24px;
+        line-height: 24px;
+    }
+}
