--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,21 @@
 .place__image {
-    width: 460px;
+    max-height: 460px;
+}
+
+@media screen and (max-width: 1024px) {
+    .place__image {
+        max-height: 440px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .place__image {
+        max-height: 340px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__image {
+        max-width: 100%;
+    }
 }
