--- a/blocks/place/__paragraph-pos/place__paragraph-pos.css
+++ b/blocks/place/__paragraph-pos/place__paragraph-pos.css
@@ -3,3 +3,16 @@
     flex-direction: column;
     row-gap: 26px;
 }
+
+@media screen and (max-width: 768px) {
+    .place__paragraph-pos {
+        row-gap: 25px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__paragraph-pos {
+        row-gap: 25px;
+        margin-top: 32px;
+    }
+}
