--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -9,3 +9,27 @@
     line-height: 163%;
     margin-left: 40px;
 }
+
+@media screen and (max-width: 1024px) {
+    .place__paragraph {
+        max-width: 456px;
+        margin-left: 32px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .place__paragraph {
+        max-width: 352px;
+        margin-left: 28px;
+        font-size: 16px;
+    }
+}
+
+
+@media screen and (max-width: 320px) {
+    .place__paragraph {
+        max-width: 288px;
+        margin: 0 16px;
+        font-size: 16px;
+    }
+}
