--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -9,3 +9,29 @@
     font-weight: 900;
     line-height: 76px;
 }
+
+@media screen and (max-width: 1024px) {
+    .place__title {
+        min-width: 440px;
+        max-width: 440px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .place__title {
+        min-width: 340px;
+        max-width: 340px;
+        font-size: 42px;
+        line-height: 46px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__title {
+        min-width: 0;
+        max-width: 288px;
+        font-size: 32px;
+        line-height: 35px;
+        margin: 0 16px 32px 16px;
+    }
+}
