--- a/blocks/place/__upper-row/place__upper-row.css
+++ b/blocks/place/__upper-row/place__upper-row.css
@@ -2,5 +2,11 @@
     display: flex;
     align-items: flex-end;
     margin-bottom: 48px;
-    max-width: 984px;
+}
+
+@media screen and (max-width: 320px) {
+    .place__upper-row {
+        display: block;
+        margin: 0;
+    }
 }
