--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,4 +1,25 @@
 .places {
-    margin: 92px auto;
+    margin: 92px auto 0 auto;
     max-width: 984px;
+}
+
+@media screen and (max-width: 1024px) {
+    .places {
+        max-width: 928px;
+        margin: 92px 48px 0 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .places {
+        max-width: 720px;
+        margin: 88px 24px 0 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .places {
+        max-width: 320px;
+        margin: 64px 0 0 0;
+    }
 }
