--- a/blocks/website/website.css
+++ b/blocks/website/website.css
@@ -4,3 +4,22 @@
     row-gap: 12px;
     margin-left: 40px;
 }
+
+@media screen and (max-width: 1024px) {
+    .website {
+        margin-left: 32px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .website {
+        margin-left: 28px;
+        margin-bottom: -22px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .website {
+        margin: 0 16px 32px 16px;
+    }
+}
