--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,3 +2,15 @@
     max-width: 1184px;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 1210px) {
+    .photo-grid{
+    max-width: 928px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .photo-grid{
+    margin: 0 48px;
+    }
+}
