--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -18,16 +18,9 @@
     }
 }
 
-@media screen and (max-width: 650px){
+@media screen and (max-width: 730px){
     .footer {
-        margin: 0 16px 24px 16px;
-        align-items: flex-end;
-    }
-}
-
-@media screen and (max-width: 320px){
-    .footer {
-        margin: 0 118px 24px 16px;
+        margin: 0 0 24px 16px;
         flex-direction: column;
         align-items: flex-start;
     }
