--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     justify-content: space-between;
-    align-items: center; 
+    align-items: flex-end; 
     max-width: 1184px;
     margin: 28px 48px 0 48px;
 }
