--- a/blocks/photo-grid/__items/photo-grid__items.css
+++ b/blocks/photo-grid/__items/photo-grid__items.css
@@ -3,7 +3,16 @@
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(4, minmax(0, 284px));
-    grid-template-rows: repeat(3, minmax(0, 213px));
+    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
     gap: 16px;
+    line-height: 0;
+}
+
+@media screen and (max-width: 1023px) {
+    .photo-grid__items {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(225px, 1fr));
+    gap: 14px;
+    }
 }
