--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -10,16 +10,28 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 950px) {
     .places {
         max-width: 720px;
+        margin: 88px 48px 0 48px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .places {
         margin: 88px 24px 0 24px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .places {
+        max-width: 320px;
+        margin: 88px auto 0 auto;
     }
 }
 
 @media screen and (max-width: 320px) {
     .places {
-        max-width: 320px;
         margin: 64px 0 0 0;
     }
 }
