--- a/blocks/footer/__copyrite/footer__copyrite.css
+++ b/blocks/footer/__copyrite/footer__copyrite.css
@@ -2,15 +2,13 @@
     margin: 0;
     color: #FFF;
     font-size: 14px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 16px;
+    font-family: 'Inter-Regular', sans-serif;
+    line-height: 1.14;
 }
 
 @media screen and (max-width: 730px) {
     .footer__copyrite {
         margin-top: 48px;
-        line-height: 14px;
+        line-height: 1;
     }
 }
