--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,15 +2,17 @@
     text-decoration: none;
     color: #FFF;
     font-size: 16px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 18px;
+    font-family: 'Inter-Regular', sans-serif;
+    line-height: 1.12;
+}
+
+.footer__link:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 730px) {
     .footer__link {
         font-size: 24px;
-        line-height: 24px;
+        line-height: 1;
     }
 }
