--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,7 +2,7 @@
     margin: 0;
     color: #FFF;
     font-size: 16px;
-    font-family: Inter;
+    font-family: 'Inter-Regular', sans-serif;
     line-height: 163%;
     margin-bottom: 33px;
     margin-top: 40px;
