--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,15 +2,21 @@
     margin: 0;
     color: #FFF;
     font-size: 54px;
-    font-family: Inter;
-    font-weight: 900;
-    line-height: 58px;
+    font-family: 'Inter-Black', sans-serif;
+    line-height: 1.07;
+}
+
+@media screen and (max-width: 472px) {
+    .intro__title {
+        font-size: 12vw;
+        line-height: 12vw;
+    }
 }
 
 @media screen and (max-width: 320px) {
     .intro__title {
         font-size: 32px;
-        font-style: normal;
-        line-height: 35px;
+        line-height: 1.09;
+        padding-right: 37px;
     }
 }
