--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,8 +3,8 @@
     color: #FFF;
     text-align: center;
     font-size: 30px;
-    font-family: Inter;
-    line-height: 36px;
+    font-family: 'Inter-Regular', sans-serif;
+    line-height: 1.2;
     max-width: 640px;
     margin-bottom: 64px;
 }
@@ -15,20 +15,19 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .lead__subtitle {
          font-size: 4.5vw;
          line-height: 5vw;
-         max-width: 70vw;
+         max-width: 75vw;
     }
 }
 
 @media screen and (max-width: 320px) {
     .lead__subtitle {
+        max-width: 288px;
         font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 20px;
+        line-height: 1.25;
         margin-bottom: 40px;
     }
 }
