--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,14 +3,13 @@
     max-width: 720px;
     color: #FFF;
     font-size: 96px;
-    font-family: Inter;
-    font-weight: 900;
-    line-height: 100px;
+    font-family: 'Inter-Black', sans-serif;
+    line-height: 1.04;
     margin-bottom: 32px;
     text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .lead__title {
          font-size: 12.5vw;
          line-height: 13vw;
@@ -21,8 +20,7 @@
     .lead__title {
         max-width: 288px;
         font-size: 40px;
-        font-style: normal;
-        line-height: 44px;
+        line-height: 1.1;
         margin-bottom: 16px;
     }
 }
