--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -14,3 +14,17 @@
     margin: 0 48px;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .photo-grid{
+    margin: 0 24px;
+    max-width: 720px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .photo-grid{
+    margin: 0 16px;
+    max-width: 320px;
+    }
+}
