--- a/blocks/website/__link/website__link.css
+++ b/blocks/website/__link/website__link.css
@@ -2,8 +2,10 @@
     max-width: 456px;
     color: #FFF;
     font-size: 18px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 22px;
+    font-family: 'Inter-Regular', sans-serif;
+    line-height: 1.2;
+}
+
+.website__link:hover {
+    opacity: 0.8;
 }
