--- a/blocks/website/__url-heading/website__url-heading.css
+++ b/blocks/website/__url-heading/website__url-heading.css
@@ -2,10 +2,8 @@
     margin: 0;
     color: #AAA;
     font-size: 12px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 12px;
+    font-family: 'Inter-Regular', sans-serif;
+    line-height: 1;
     letter-spacing: 2px;
     max-width: 456px;
 }
