--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,7 +3,8 @@
     max-width: 720px;
     color: #FFF;
     font-size: 96px;
-    font-family: 'Inter-Black', sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-weight: 900;
     line-height: 1.04;
     margin-bottom: 32px;
     text-align: center;
