--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,7 +4,8 @@
     max-width: 460px;
     color: #FFF;
     font-size: 72px;
-    font-family: 'Inter-Black', sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-weight: 900;
     line-height: 1.05;
 }
 
