--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,19 +1,1 @@
-.place {
-    margin-bottom: 80px;
-}
-
-.place:last-child {
-    margin-bottom: 0;
-}
-
-@media screen and (max-width: 950px) {
-    .place {
-        margin-bottom: 73px;
-    }
-}
-
-@media screen and (max-width: 650px) {
-    .place {
-        margin-bottom: 50px;
-    }
-}
+/* gitkeep */
