--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -4,9 +4,9 @@
     color: #FFF;
     text-align: center;
     font-size: 18px;
-    font-family: 'Inter-Regular', sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
     line-height: 1.2;
-    z-index: 1;
 }
 
 @media screen and (max-width: 375px) {
