--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,15 +2,14 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    row-gap: 32px;
-    min-height: 740px;
-    margin: 7.2% 0;
+    align-content: center;
+    margin: 7.2% auto;
     background-image: url('../../images/cover-trains.jpg');
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    max-width: 1184px;
+    min-height: 740px;
 }
 
 .cover::before {
@@ -29,24 +28,28 @@
     transition: linear 0.3s;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1205px) {
     .cover {
-        min-height: 640px;
-        margin: 9% 0;
+        min-height: 640px
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
+    .cover {
+        margin: 9% 0;
+        min-height: 480px;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .cover {
         margin: 11.8% 0;
-        min-height: 480px;
+        min-height: 200px;
     }
 }
 
 @media screen and (max-width: 320px) {
     .cover {
         margin: 20% 0;
-        row-gap: 16px;
-        min-height: 200px;
     }
 }
