--- a/blocks/footer/__copyrite/footer__copyrite.css
+++ b/blocks/footer/__copyrite/footer__copyrite.css
@@ -2,7 +2,8 @@
     margin: 0;
     color: #FFF;
     font-size: 14px;
-    font-family: 'Inter-Regular', sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
     line-height: 1.14;
 }
 
