--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,7 +2,8 @@
     margin: 0;
     color: #FFF;
     font-size: 54px;
-    font-family: 'Inter-Black', sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-weight: 900;
     line-height: 1.07;
 }
 
