--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,11 +1,12 @@
-.website__link {
+.place__link {
     max-width: 456px;
     color: #FFF;
     font-size: 18px;
-    font-family: 'Inter-Regular', sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
     line-height: 1.2;
 }
 
-.website__link:hover {
+.place__link:hover {
     opacity: 0.8;
 }
