--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,8 +1,9 @@
-.website__url-heading {
+.place__url-heading {
     margin: 0;
     color: #AAA;
     font-size: 12px;
-    font-family: 'Inter-Regular', sans-serif;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
     line-height: 1;
     letter-spacing: 2px;
     max-width: 456px;
