--- a/blocks/language/__lang-link/language__lang-link.css
+++ b/blocks/language/__lang-link/language__lang-link.css
@@ -2,8 +2,9 @@
     text-decoration: none;
     color: #FFF;
     font-size: 24px;
-    font-family: 'Inter-Regular', sans-serif;
+    font-family: 'Inter', sans-serif;
     line-height: 1.16;
+    font-weight: 400;
 }
 
 .language__lang-link:hover {
